Created What I DO

--- a/index.html
+++ b/index.html
@@ -1,29 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Dev Portfolio</title>
+    <!-- GOOGLE FONTS LINK -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+    <!-- FAVICON LINK -->
     <!-- CUSTOM CSS LINK -->
-    <link href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
-    <!-- HEADER START -->
-     <header>
 
-     </header>
+<body class="open-sans-normal">
+    <!-- HEADER START -->
+    <header class="header secondary-bg">
+        <!-- NAV-START -->
+        <nav>
+            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+            <ul>
+                <li><a class="dark-2" href="">Portfolio</a></li>
+                <li><a class="dark-2" href="">Blog</a></li>
+                <li><a href=""><button class="btn-primary">Hire Me!</button></a></li>
+            </ul>
+        </nav>
+        <!-- NAV-END -->
+
+        <!-- BANNER START -->
+        <div class="banner">
+            <div class="banner-content">
+                <h4 class="banner-greetings dark-2">Hi, I am</h4>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="p-banner-description">He seemed cold and distant, yet once was friendly before betrayal. In
+                    the morning, his behavior toward society changed in brief, thoughtful moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="banner-btn">Contact</button>
+            </div>
+            <div class="banner-image">
+                <img class="hardy-image-banner" src="assets/img/hardy.png" alt="hardy.png">
+            </div>
+        </div>
+        <!-- BANNER END -->
+    </header>
     <!-- HEADER END -->
 
     <!-- MAIN START -->
-     <main>
+    <main class="about secondary-bg">
+        <section class="about secondary-bg">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I'm a designer & developer with a strong passion for web design. I love
+                building clean, simple, and modern websites that deliver real value to users. Over the years, thousands
+                of clients have seen outstanding results from collaborating with me. I pride myself on delivering
+                quality work on time and within budget, always aligned with the client’s vision and requirements.
+                Meeting expectations and exceeding them is the core of our motto and mission.</p>
 
-     </main>
+            <div class="about-items">
+                <div class="about-item">
+                    <p class="item-title">Name</p>
+                    <p class="item-description">Mary Hardy</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email</p>
+                    <p class="item-description">novan5441@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Date Of Birth</p>
+                    <p class="item-description">Dec 9, 1999</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">From</p>
+                    <p class="item-description">Dhaka, Bangladesh</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- WHAT I DO STARTS -->
+        <section>
+            <!-- BOX 1 -->
+            <div>
+                <div>
+                    <img src="assets/img/icons/js.png" alt="js">
+                </div>
+                <div>
+                    <h1>Vanilla JavaScript</h1>
+                    <p>I showcase my skills and technologies here. The icon above is customizable using any of the 1500+ free FontAwesome 5 icons. Aenean commodo ligula eget dolor—I use this section to reflect my strengths and highlight what I bring to every project." Let me know if you want it more casual, professional, or creative!</p>
+                </div>
+            </div>
+            <!-- BOX 2 -->
+            <div>
+                <div>
+                    <img src="assets/img/icons/react.png" alt="react">
+                </div>
+                <div>
+                    <h1></h1>
+                    <p></p>
+                </div>
+            </div>
+            <!-- BOX 3 -->
+            <div>
+                <div>
+                    <img src="assets/img/icons/nodejs.png" alt="nodejs">
+                </div>
+                <div>
+                    <h1></h1>
+                    <p></p>
+                </div>
+            </div>
+            <!-- BOX 4 -->
+            <div>
+                <div>
+                    <img src="assets/img/icons/mongo.png" alt="mongo">
+                </div>
+                <div>
+                    <h1></h1>
+                    <p></p>
+                </div>
+            </div>
+        </section>
+        <!-- WHAT I DO ENDS -->
+
+    </main>
     <!-- MAIN END -->
 
     <!-- FOOTER START -->
-     <footer>
+    <footer>
 
-     </footer>
+    </footer>
     <!-- FOOTER END -->
 </body>
+
 </html>
