Updated What I DO

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- HEADER END -->
 
     <!-- MAIN START -->
-    <main class="about secondary-bg">
+    <main>
         <section class="about secondary-bg">
             <h3 class="section-title">About Me</h3>
             <p class="section-description">I'm a designer & developer with a strong passion for web design. I love
@@ -78,46 +78,41 @@
         </section>
 
         <!-- WHAT I DO STARTS -->
-        <section>
-            <!-- BOX 1 -->
-            <div>
-                <div>
+        <section class="skills">
+            <h3 class="section-title text-center">What I DO</h3>
+            <p class="section-description text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+
+            <div class="skills-container">
+                <!-- .skills*4>img+h4.skill-title+p.skill-description -->
+
+                <!-- SKILL 1 -->
+                <div class="skill">
                     <img src="assets/img/icons/js.png" alt="js">
+                    <h4 class="skill-title">Vanilla JavaScript</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
-                <div>
-                    <h1>Vanilla JavaScript</h1>
-                    <p>I showcase my skills and technologies here. The icon above is customizable using any of the 1500+ free FontAwesome 5 icons. Aenean commodo ligula eget dolor—I use this section to reflect my strengths and highlight what I bring to every project." Let me know if you want it more casual, professional, or creative!</p>
-                </div>
-            </div>
-            <!-- BOX 2 -->
-            <div>
-                <div>
+                
+                <!-- SKILL 2 -->
+                <div class="skill">
                     <img src="assets/img/icons/react.png" alt="react">
+                    <h4 class="skill-title">React</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
-                <div>
-                    <h1></h1>
-                    <p></p>
-                </div>
-            </div>
-            <!-- BOX 3 -->
-            <div>
-                <div>
+
+                <!-- SKILL 3 -->
+                <div class="skill">
                     <img src="assets/img/icons/nodejs.png" alt="nodejs">
+                    <h4 class="skill-title">Node.js</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
-                <div>
-                    <h1></h1>
-                    <p></p>
-                </div>
-            </div>
-            <!-- BOX 4 -->
-            <div>
-                <div>
+
+                <!-- SKILL 4 -->
+                <div class="skill">
                     <img src="assets/img/icons/mongo.png" alt="mongo">
+                    <h4 class="skill-title">MongoDB</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
-                <div>
-                    <h1></h1>
-                    <p></p>
-                </div>
+
             </div>
         </section>
         <!-- WHAT I DO ENDS -->
