Updated Footer Form

--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Dev Portfolio</title>
-    <!-- GOOGLE FONTS LINK -->
+    <!-- GOOGLE FONTS LINK START -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
-    <!-- FAVICON LINK -->
-    <!-- CUSTOM CSS LINK -->
+    <!-- FAVICON LINK START-->
+    <!-- CUSTOM CSS LINK START -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body class="open-sans-normal">
-    <!-- HEADER START -->
+    <!-- HEADER START START-->
     <header class="header secondary-bg">
-        <!-- NAV-START -->
+        <!-- NAV-START START -->
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -80,7 +80,9 @@
         <!-- WHAT I DO STARTS -->
         <section class="skills">
             <h3 class="section-title text-center">What I DO</h3>
-            <p class="section-description text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <p class="section-description text-center">I have more than 10 years experience building software for
+                clients all over the world. Below is a quick overview of my main technical skill sets and technologies i
+                use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
 
             <div class="skills-container">
                 <!-- .skills*4>img+h4.skill-title+p.skill-description -->
@@ -89,40 +91,139 @@
                 <div class="skill">
                     <img src="assets/img/icons/js.png" alt="js">
                     <h4 class="skill-title">Vanilla JavaScript</h4>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
-                
+
                 <!-- SKILL 2 -->
                 <div class="skill">
                     <img src="assets/img/icons/react.png" alt="react">
                     <h4 class="skill-title">React</h4>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
 
                 <!-- SKILL 3 -->
                 <div class="skill">
                     <img src="assets/img/icons/nodejs.png" alt="nodejs">
                     <h4 class="skill-title">Node.js</h4>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
 
                 <!-- SKILL 4 -->
                 <div class="skill">
                     <img src="assets/img/icons/mongo.png" alt="mongo">
                     <h4 class="skill-title">MongoDB</h4>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
 
             </div>
         </section>
         <!-- WHAT I DO ENDS -->
 
+        <!-- RESUME STARTS -->
+        <section class="resume">
+            <h3 class="section-title">A summary of My Resume</h3>
+            <div class="resume-container">
+                <!-- .resume-column*2>h3.resume-column-title+.experience*3>h4.experience-title+h5.experience-sub-title+.experience-description -->
+
+                <!-- 1st COLUMN -->
+                <div class="resume-column">
+                    <h3 class="resume-column-title dark-2">My Education</h3>
+                    <div class="experience">
+                        <h4 class="experience-title dark-2">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title dark-4">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-description dark-3">List skill/technologies here. You can change the icon
+                            above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                            dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title dark-2">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title dark-4">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-description dark-3">List skill/technologies here. You can change the icon
+                            above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                            dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title dark-2">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title dark-4">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-description dark-3">List skill/technologies here. You can change the icon
+                            above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                            dolor.
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 2nd COLUMN -->
+                <div class="resume-column">
+                    <h3 class="resume-column-title dark-2">My Experience</h3>
+                    <div class="experience">
+                        <h4 class="experience-title dark-2">Sr. Front End Developer</h4>
+                        <h5 class="experience-sub-title dark-4">Apple Inc / 2020 - Current</h5>
+                        <div class="experience-description dark-3">List skill/technologies here. You can change the icon
+                            above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                            dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title dark-2">Jr. Font End Developer</h4>
+                        <h5 class="experience-sub-title dark-4">Dribbble Inc / 2018 - 2022</h5>
+                        <div class="experience-description dark-3">List skill/technologies here. You can change the icon
+                            above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                            dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title dark-2">HTML Developer</h4>
+                        <h5 class="experience-sub-title dark-4">Adobe Inc / 2017 - 2018</h5>
+                        <div class="experience-description dark-3">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!-- RESUME ENDS -->
+
     </main>
     <!-- MAIN END -->
 
     <!-- FOOTER START -->
-    <footer>
+    <footer class="secondary-bg">
+        <!-- FOOTER-LINK STARTS -->
+        <div class="footer-column">
+            <h3 class="section-title">Let's Connect</h3>
+            <p class="section-description">Please fill out the form on this section to contact with me or call between
+                9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div>
+                <a href=""><img src="assets/img/icons/facebook.png" alt="Facebook"></a>
+                <a href=""><img src="assets/img/icons/insta.png" alt="Instagram"></a>
+                <a href=""><img src="assets/img/icons/twitter.png" alt="Twitter"></a>
+            </div>
+        </div>
 
+        <!-- FOOTER-FORM STARTS -->
+        <div class="footer-column">
+            <h3 class="section-title">Inbox Me</h3>
+            <!-- <form action="">
+                <input type="text" name="name" id="" placeholder="Your Name">
+                <input type="email" name="email" id="" placeholder="Your Email"> 
+                <textarea name="" id="" cols="30" rows="5" placeholder="Your Massage"></textarea>
+                <input class="btn-primary" type="submit" value="submit">
+            </form> -->
+            <form action="" method="POST">
+                <input type="text" name="name" required placeholder="Your Name">
+                <input type="email" name="email" required placeholder="Your Email">
+                <textarea name="message" required placeholder="Your Message"></textarea>
+                <input class="btn-primary d-f" type="submit" value="Submit">
+            </form>
+        </div>
     </footer>
     <!-- FOOTER END -->
 </body>
